package grpc;

import dto.PromozioneDTO;
import dto.RichiestaDTO;
import dto.RispostaDTO;
import eventi.EventoPromozione;
import eventi.ListaEventi;
import grpc.TrenicalServiceGrpc.TrenicalServiceImplBase;
import io.grpc.stub.StreamObserver;
import observer.NotificaDispatcher;
import command.ServerRequestHandler;
import persistence.MemoriaPromozioni;
import util.GrpcMapper;

import java.time.LocalDateTime;
import java.time.format.DateTimeFormatter;
import java.util.UUID;
import java.util.concurrent.ConcurrentHashMap;
import java.util.concurrent.Executors;
import java.util.concurrent.ScheduledExecutorService;
import java.util.concurrent.TimeUnit;

/**
 * Implementazione completa del servizio gRPC TreniCal
 * Gestisce tutte le operazioni: richieste, notifiche tratte e stream promozioni
 */
public class TrenicalServiceImpl extends TrenicalServiceImplBase {

    private final NotificaDispatcher notificaDispatcher;
    private final ServerRequestHandler requestHandler;
    private final MemoriaPromozioni memoriaPromozioni;

    // ‚úÖ Gestione stream promozioni
    private final ConcurrentHashMap<String, StreamObserver<PromozioneGrpc>> promozioniStreams = new ConcurrentHashMap<>();
    private final ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(2);

    // ‚úÖ Gestione stream notifiche tratte
    private final ConcurrentHashMap<String, StreamObserver<NotificaTrattaGrpc>> notificheStreams = new ConcurrentHashMap<>();

    public TrenicalServiceImpl(NotificaDispatcher notificaDispatcher,
                               ServerRequestHandler requestHandler,
                               MemoriaPromozioni memoriaPromozioni) {
        this.notificaDispatcher = notificaDispatcher;
        this.requestHandler = requestHandler;
        this.memoriaPromozioni = memoriaPromozioni;

        // ‚úÖ Avvia il simulatore di promozioni
        avviaSimulatorePromozioni();
    }

    // ‚úÖ Costruttore semplificato per compatibilit√†
    public TrenicalServiceImpl(NotificaDispatcher notificaDispatcher,
                               ServerRequestHandler requestHandler) {
        this(notificaDispatcher, requestHandler, new MemoriaPromozioni());
    }

    /**
     * ‚úÖ Gestisce le richieste principali (acquisto, prenotazione, ecc.)
     */
    @Override
    public void inviaRichiesta(RichiestaGrpc request, StreamObserver<RispostaGrpc> responseObserver) {
        try {
            System.out.println("üì® Ricevuta richiesta: " + request.getTipo() + " da cliente: " + request.getIdCliente());

            // ‚úÖ Converte la richiesta gRPC in DTO
            RichiestaDTO richiestaDTO = GrpcMapper.toDTO(request);

            // ‚úÖ Processa la richiesta tramite il handler
            RispostaDTO rispostaDTO = requestHandler.gestisci(richiestaDTO);

            // ‚úÖ Converte la risposta DTO in gRPC
            RispostaGrpc rispostaGrpc = GrpcMapper.fromDTO(rispostaDTO);

            System.out.println("üì§ Risposta inviata: " + rispostaDTO.getEsito() + " - " + rispostaDTO.getMessaggio());

            // ‚úÖ Invia la risposta al client
            responseObserver.onNext(rispostaGrpc);
            responseObserver.onCompleted();

        } catch (IllegalArgumentException e) {
            System.err.println("‚ùå Errore validazione richiesta: " + e.getMessage());
            inviaErrore(responseObserver, "Parametri richiesta non validi: " + e.getMessage());

        } catch (Exception e) {
            System.err.println("‚ùå Errore interno durante elaborazione richiesta: " + e.getMessage());
            e.printStackTrace();
            inviaErrore(responseObserver, "Errore interno del server: " + e.getMessage());
        }
    }

    /**
     * ‚úÖ Gestisce lo stream delle promozioni
     */
    @Override
    public void streamPromozioni(RichiestaPromozioni request, StreamObserver<PromozioneGrpc> responseObserver) {
        final String clientId = "client_" + System.currentTimeMillis();

        try {
            System.out.println("üéâ Nuovo client collegato per stream promozioni: " + clientId);

            // ‚úÖ Registra lo stream
            promozioniStreams.put(clientId, responseObserver);

            // ‚úÖ Invia le promozioni attive esistenti
            inviaPromozioniEsistenti(responseObserver);

            System.out.println("‚úÖ Stream promozioni configurato per client: " + clientId);

        } catch (Exception e) {
            System.err.println("‚ùå Errore setup stream promozioni: " + e.getMessage());
            promozioniStreams.remove(clientId);
            responseObserver.onError(e);
        }
    }

    /**
     * ‚úÖ Gestisce lo stream delle notifiche per tratte specifiche
     */
    @Override
    public void streamNotificheTratta(IscrizioneNotificheGrpc request, StreamObserver<NotificaTrattaGrpc> responseObserver) {
        final String clientKey = request.getEmailCliente() + "_" + request.getTrattaId();

        try {
            System.out.println("üì° Iscrizione notifiche tratta: " + request.getEmailCliente() +
                    " per tratta: " + request.getTrattaId());

            // ‚úÖ Valida l'UUID della tratta
            UUID trattaId = UUID.fromString(request.getTrattaId());

            // ‚úÖ Registra il client per le notifiche della tratta
            notificheStreams.put(clientKey, responseObserver);
            notificaDispatcher.registraOsservatore(trattaId, responseObserver);

            // ‚úÖ Invia messaggio di conferma iscrizione
            NotificaTrattaGrpc conferma = NotificaTrattaGrpc.newBuilder()
                    .setMessaggio("‚úÖ Iscrizione completata per la tratta " + request.getTrattaId())
                    .build();
            responseObserver.onNext(conferma);

            System.out.println("‚úÖ Notifiche tratta configurate per: " + clientKey);

        } catch (IllegalArgumentException e) {
            System.err.println("‚ùå ID tratta non valido: " + request.getTrattaId());
            responseObserver.onError(new IllegalArgumentException("ID tratta non valido"));

        } catch (Exception e) {
            System.err.println("‚ùå Errore setup stream notifiche: " + e.getMessage());
            notificheStreams.remove(clientKey);
            responseObserver.onError(e);
        }
    }

    /**
     * ‚úÖ Metodo helper per inviare errori in modo consistente
     */
    private void inviaErrore(StreamObserver<RispostaGrpc> responseObserver, String messaggio) {
        RispostaGrpc errore = RispostaGrpc.newBuilder()
                .setEsito("KO")
                .setMessaggio(messaggio)
                .build();

        try {
            responseObserver.onNext(errore);
            responseObserver.onCompleted();
        } catch (Exception e) {
            System.err.println("‚ùå Errore invio risposta di errore: " + e.getMessage());
        }
    }

    /**
     * ‚úÖ Invia le promozioni attualmente attive al nuovo client
     */
    private void inviaPromozioniEsistenti(StreamObserver<PromozioneGrpc> responseObserver) {
        try {
            var promozioniAttive = memoriaPromozioni.getPromozioniAttive();

            for (var promo : promozioniAttive) {
                if (promo.isAttiva(java.time.LocalDate.now())) {
                    PromozioneGrpc promoGrpc = PromozioneGrpc.newBuilder()
                            .setNome(promo.getDescrizione())
                            .setDescrizione(promo.getDescrizione())
                            .setDataInizio(promo.getDataInizio().toString())
                            .setDataFine(promo.getDataFine().toString())
                            .build();

                    responseObserver.onNext(promoGrpc);
                }
            }

            System.out.println("üì§ Inviate " + promozioniAttive.size() + " promozioni esistenti");

        } catch (Exception e) {
            System.err.println("‚ùå Errore invio promozioni esistenti: " + e.getMessage());
        }
    }

    /**
     * ‚úÖ Simulatore di promozioni per testing
     */
    private void avviaSimulatorePromozioni() {
        // ‚úÖ Simula nuove promozioni ogni 60 secondi
        scheduler.scheduleAtFixedRate(() -> {
            try {
                if (!promozioniStreams.isEmpty()) {
                    generaPromozioneTest();
                }
            } catch (Exception e) {
                System.err.println("‚ùå Errore generazione promozione test: " + e.getMessage());
            }
        }, 30, 60, TimeUnit.SECONDS);

        System.out.println("‚úÖ Simulatore promozioni avviato (ogni 60s)");
    }

    /**
     * ‚úÖ Genera una promozione di test
     */
    private void generaPromozioneTest() {
        String[] nomiPromo = {
                "Sconto Estivo", "Offerta Weekend", "Promo Fedelt√†",
                "Super Risparmio", "Viaggio Conveniente"
        };

        String nome = nomiPromo[(int) (Math.random() * nomiPromo.length)];
        LocalDateTime ora = LocalDateTime.now();

        PromozioneDTO promo = new PromozioneDTO(
                nome,
                "Sconto speciale del " + (10 + (int)(Math.random() * 30)) + "%",
                ora,
                ora.plusDays(7)
        );

        // ‚úÖ Notifica tramite sistema eventi
        ListaEventi.getInstance().notifica(new EventoPromozione(promo));

        // ‚úÖ Invia a tutti i client collegati allo stream
        broadcastPromozione(promo);

        System.out.println("üéâ Promozione generata: " + nome);
    }

    /**
     * ‚úÖ Invia una promozione a tutti i client collegati
     */
    public void broadcastPromozione(PromozioneDTO promo) {
        if (promozioniStreams.isEmpty()) {
            return;
        }

        PromozioneGrpc promoGrpc = PromozioneGrpc.newBuilder()
                .setNome(promo.getNome())
                .setDescrizione(promo.getDescrizione())
                .setDataInizio(promo.getDataInizio().format(DateTimeFormatter.ISO_LOCAL_DATE_TIME))
                .setDataFine(promo.getDataFine().format(DateTimeFormatter.ISO_LOCAL_DATE_TIME))
                .build();

        // ‚úÖ Rimuovi connessioni morte e invia a quelle attive
        promozioniStreams.entrySet().removeIf(entry -> {
            try {
                entry.getValue().onNext(promoGrpc);
                return false; // Mantieni la connessione
            } catch (Exception e) {
                System.err.println("‚ùå Rimossa connessione promozioni inattiva: " + entry.getKey());
                return true; // Rimuovi la connessione
            }
        });

        System.out.println("üì° Promozione inviata a " + promozioniStreams.size() + " client");
    }

    /**
     * ‚úÖ Cleanup delle risorse quando il servizio viene fermato
     */
    public void shutdown() {
        System.out.println("üõë Shutdown TrenicalService...");

        // ‚úÖ Chiudi tutti gli stream attivi
        promozioniStreams.values().forEach(stream -> {
            try {
                stream.onCompleted();
            } catch (Exception e) {
                System.err.println("‚ùå Errore chiusura stream promozioni: " + e.getMessage());
            }
        });

        notificheStreams.values().forEach(stream -> {
            try {
                stream.onCompleted();
            } catch (Exception e) {
                System.err.println("‚ùå Errore chiusura stream notifiche: " + e.getMessage());
            }
        });

        // ‚úÖ Ferma lo scheduler
        scheduler.shutdown();
        try {
            if (!scheduler.awaitTermination(5, TimeUnit.SECONDS)) {
                scheduler.shutdownNow();
            }
        } catch (InterruptedException e) {
            scheduler.shutdownNow();
            Thread.currentThread().interrupt();
        }

        System.out.println("‚úÖ TrenicalService shutdown completato");
    }

    /**
     * ‚úÖ Statistiche del servizio
     */
    public String getStats() {
        return String.format("üìä TrenicalService Stats:\n" +
                        "   - Stream promozioni attivi: %d\n" +
                        "   - Stream notifiche attivi: %d\n" +
                        "   - Scheduler running: %s",
                promozioniStreams.size(),
                notificheStreams.size(),
                !scheduler.isShutdown());
    }
}