package test;

import IMPL.BancaServiceImpl;
import command.ServerRequestHandler;
import dto.*;
import enums.ClasseServizio;
import enums.TipoPrezzo;
import factory.TrattaFactoryConcrete;
import grpc.*;
import io.grpc.ManagedChannel;
import io.grpc.ManagedChannelBuilder;
import io.grpc.Server;
import io.grpc.ServerBuilder;
import io.grpc.stub.StreamObserver;
import model.Tratta;
import observer.*;
import persistence.*;
import service.BancaServiceClient;
import util.GrpcMapper;

import java.time.LocalDate;
import java.time.LocalDateTime;
import java.util.*;
import java.util.concurrent.*;
import java.util.concurrent.atomic.AtomicInteger;

/**
 * üì° TEST COMPLETO COMUNICAZIONE gRPC
 *
 * Verifica TUTTI gli aspetti della comunicazione gRPC:
 * 1. Request-Response standard
 * 2. Stream bidirezionali (promozioni)
 * 3. Stream server-side (notifiche)
 * 4. Gestione errori e timeout
 * 5. Serializzazione/deserializzazione
 * 6. Performance e throughput
 * 7. Resilienza e reconnection
 * 8. Concorrenza estrema
 */
public class GrpcCommunicationTest {

    private static final int SERVER_PORT = 8101;
    private static final int BANCA_PORT = 8102;

    private static Server server;
    private static Server bancaServer;
    private static TrenicalServiceImpl trenicalService;

    // Statistiche test gRPC
    private static final AtomicInteger requestsInviati = new AtomicInteger(0);
    private static final AtomicInteger responsesRicevute = new AtomicInteger(0);
    private static final AtomicInteger promozioniRicevute = new AtomicInteger(0);
    private static final AtomicInteger notificheRicevute = new AtomicInteger(0);
    private static final AtomicInteger erroriConnessione = new AtomicInteger(0);

    public static void main(String[] args) {
        System.out.println("üì° ===== TEST COMPLETO COMUNICAZIONE gRPC =====");

        try {
            // 1Ô∏è‚É£ Avvia sistema
            avviaSistema();

            // 2Ô∏è‚É£ Test request-response massivo
            testRequestResponseMassivo();

            // 3Ô∏è‚É£ Test stream promozioni extreme
            testStreamPromozioniExtreme();

            // 4Ô∏è‚É£ Test stream notifiche concurrent
            testStreamNotificheConcurrent();

            // 5Ô∏è‚É£ Test serializzazione complessa
            testSerializzazioneComplessa();

            // 6Ô∏è‚É£ Test gestione errori gRPC
            testGestioneErroriGrpc();

            // 7Ô∏è‚É£ Test timeout e resilienza
            testTimeoutResilienza();

            // 8Ô∏è‚É£ Test performance throughput
            testPerformanceThroughput();

            // 9Ô∏è‚É£ Report finale gRPC
            stampaReportGrpc();

        } catch (Exception e) {
            System.err.println("‚ùå Errore test gRPC: " + e.getMessage());
            e.printStackTrace();
        } finally {
            fermaSistema();
        }
    }

    private static void avviaSistema() throws Exception {
        System.out.println("\nüöÄ Avvio sistema per test gRPC");

        // Server Banca
        bancaServer = ServerBuilder.forPort(BANCA_PORT)
                .addService(new BancaServiceImpl())
                .build()
                .start();

        // Setup TreniCal
        MemoriaBiglietti memoriaBiglietti = new MemoriaBiglietti();
        MemoriaClientiFedeli memoriaClienti = new MemoriaClientiFedeli();
        MemoriaTratte memoriaTratte = new MemoriaTratte();
        MemoriaPromozioni memoriaPromozioni = new MemoriaPromozioni();

        // Genera tratte per test
        TrattaFactoryConcrete factory = new TrattaFactoryConcrete();
        for (int i = 1; i <= 3; i++) {
            List<Tratta> tratte = factory.generaTratte(LocalDate.now().plusDays(i));
            tratte.forEach(memoriaTratte::aggiungiTratta);
        }

        EventDispatcher dispatcher = new EventDispatcher();
        GrpcNotificaDispatcher notificaDispatcher = new GrpcNotificaDispatcher();

        dispatcher.registra(new MemoriaBigliettiListener(memoriaBiglietti));
        dispatcher.registra(new MemoriaClientiFedeliListener(memoriaClienti));

        BancaServiceClient bancaClient = new BancaServiceClient("localhost", BANCA_PORT);
        ServerRequestHandler handler = new ServerRequestHandler(
                memoriaBiglietti, memoriaClienti, memoriaTratte, dispatcher, bancaClient
        );

        trenicalService = new TrenicalServiceImpl(notificaDispatcher, handler, memoriaPromozioni);

        // Server gRPC
        server = ServerBuilder.forPort(SERVER_PORT)
                .addService(trenicalService)
                .build()
                .start();

        Thread.sleep(2000);
        System.out.println("‚úÖ Sistema gRPC avviato");
    }

    /**
     * üîÑ Test request-response con volume estremo
     */
    private static void testRequestResponseMassivo() throws Exception {
        System.out.println("\nüîÑ Test 1: Request-Response Massivo");
        System.out.println("Target: 1000 richieste simultanee");

        ExecutorService executor = Executors.newFixedThreadPool(100);
        CountDownLatch latch = new CountDownLatch(1000);

        long startTime = System.currentTimeMillis();

        for (int i = 0; i < 1000; i++) {
            final int requestId = i;
            executor.submit(() -> {
                try {
                    ManagedChannel channel = ManagedChannelBuilder
                            .forAddress("localhost", SERVER_PORT)
                            .usePlaintext()
                            .build();

                    TrenicalServiceGrpc.TrenicalServiceBlockingStub stub =
                            TrenicalServiceGrpc.newBlockingStub(channel);

                    // Test diversi tipi di richieste
                    String[] tipiRichiesta = {"FILTRA", "CARTA_FEDELTA"};
                    String tipo = tipiRichiesta[requestId % tipiRichiesta.length];

                    RichiestaGrpc richiesta = RichiestaGrpc.newBuilder()
                            .setTipo(tipo)
                            .setIdCliente("test-client-" + requestId)
                            .setMessaggioExtra(";;;")
                            .build();

                    requestsInviati.incrementAndGet();
                    RispostaGrpc risposta = stub.inviaRichiesta(richiesta);
                    responsesRicevute.incrementAndGet();

                    channel.shutdown();
                    channel.awaitTermination(1, TimeUnit.SECONDS);

                } catch (Exception e) {
                    erroriConnessione.incrementAndGet();
                } finally {
                    latch.countDown();
                }
            });
        }

        latch.await(60, TimeUnit.SECONDS);
        long endTime = System.currentTimeMillis();

        executor.shutdown();

        System.out.println("   üìä Requests inviati: " + requestsInviati.get());
        System.out.println("   üì• Responses ricevute: " + responsesRicevute.get());
        System.out.println("   ‚ùå Errori connessione: " + erroriConnessione.get());
        System.out.println("   ‚è±Ô∏è Tempo totale: " + (endTime - startTime) + "ms");
        System.out.println("   üöÄ Throughput: " + (responsesRicevute.get() * 1000.0 / (endTime - startTime)) + " req/sec");
    }

    /**
     * üéâ Test stream promozioni con carico estremo
     */
    private static void testStreamPromozioniExtreme() throws Exception {
        System.out.println("\nüéâ Test 2: Stream Promozioni Extreme");
        System.out.println("Target: 50 client, 100 promozioni = 5000 messaggi");

        List<ManagedChannel> channels = new ArrayList<>();
        ExecutorService executor = Executors.newFixedThreadPool(50);
        CountDownLatch setupLatch = new CountDownLatch(50);

        // Setup 50 client per stream promozioni
        for (int i = 0; i < 50; i++) {
            final int clientId = i;
            executor.submit(() -> {
                try {
                    ManagedChannel channel = ManagedChannelBuilder
                            .forAddress("localhost", SERVER_PORT)
                            .usePlaintext()
                            .build();

                    synchronized (channels) {
                        channels.add(channel);
                    }

                    TrenicalServiceGrpc.TrenicalServiceStub stub = TrenicalServiceGrpc.newStub(channel);

                    RichiestaPromozioni richiesta = RichiestaPromozioni.newBuilder().build();

                    stub.streamPromozioni(richiesta, new StreamObserver<PromozioneGrpc>() {
                        @Override
                        public void onNext(PromozioneGrpc promo) {
                            promozioniRicevute.incrementAndGet();
                            if (clientId == 0) { // Log solo dal primo client
                                System.out.println("     üì• " + promo.getNome());
                            }
                        }

                        @Override
                        public void onError(Throwable t) {
                            erroriConnessione.incrementAndGet();
                        }

                        @Override
                        public void onCompleted() {
                            // Stream completato
                        }
                    });

                } catch (Exception e) {
                    erroriConnessione.incrementAndGet();
                } finally {
                    setupLatch.countDown();
                }
            });
        }

        // Aspetta setup
        setupLatch.await(30, TimeUnit.SECONDS);
        Thread.sleep(2000);

        System.out.println("   üì° " + channels.size() + " client collegati, inizio broadcast...");

        // Broadcast 100 promozioni
        long startTime = System.currentTimeMillis();
        for (int i = 0; i < 100; i++) {
            PromozioneDTO promo = new PromozioneDTO(
                    "GrpcPromo" + i,
                    "Test gRPC " + i + " - Sconto " + (10 + i % 50) + "%",
                    LocalDateTime.now(),
                    LocalDateTime.now().plusDays(1)
            );

            trenicalService.broadcastPromozione(promo);
            Thread.sleep(50); // 20 promo/sec
        }

        // Aspetta propagazione
        Thread.sleep(3000);
        long endTime = System.currentTimeMillis();

        System.out.println("   üìä Promozioni inviate: 100");
        System.out.println("   üì• Messaggi ricevuti totali: " + promozioniRicevute.get());
        System.out.println("   üéØ Attesi: " + (50 * 100) + " (50 client √ó 100 promo)");
        System.out.println("   üìà Efficienza: " + (promozioniRicevute.get() * 100.0 / (50 * 100)) + "%");
        System.out.println("   ‚è±Ô∏è Tempo broadcast: " + (endTime - startTime) + "ms");

        // Cleanup
        for (ManagedChannel channel : channels) {
            channel.shutdown();
        }
        executor.shutdown();
    }

    /**
     * üì® Test stream notifiche concurrent
     */
    private static void testStreamNotificheConcurrent() throws Exception {
        System.out.println("\nüì® Test 3: Stream Notifiche Concurrent");
        System.out.println("Target: 30 client iscritti a notifiche diverse");

        ExecutorService executor = Executors.newFixedThreadPool(30);
        CountDownLatch latch = new CountDownLatch(30);

        for (int i = 0; i < 30; i++) {
            final int clientId = i;
            executor.submit(() -> {
                try {
                    ManagedChannel channel = ManagedChannelBuilder
                            .forAddress("localhost", SERVER_PORT)
                            .usePlaintext()
                            .build();

                    TrenicalServiceGrpc.TrenicalServiceStub stub = TrenicalServiceGrpc.newStub(channel);

                    // Usa tratta diversa per ogni client (per testare selettivit√†)
                    String trattaId = "tratta-test-" + (clientId % 5);

                    IscrizioneNotificheGrpc richiesta = IscrizioneNotificheGrpc.newBuilder()
                            .setEmailCliente("client" + clientId + "@test.com")
                            .setTrattaId(trattaId)
                            .build();

                    stub.streamNotificheTratta(richiesta, new StreamObserver<NotificaTrattaGrpc>() {
                        @Override
                        public void onNext(NotificaTrattaGrpc notifica) {
                            notificheRicevute.incrementAndGet();
                        }

                        @Override
                        public void onError(Throwable t) {
                            erroriConnessione.incrementAndGet();
                        }

                        @Override
                        public void onCompleted() {
                            // OK
                        }
                    });

                    // Mantieni connessione per 10 secondi
                    Thread.sleep(10000);
                    channel.shutdown();

                } catch (Exception e) {
                    erroriConnessione.incrementAndGet();
                } finally {
                    latch.countDown();
                }
            });
        }

        // Aspetta setup
        Thread.sleep(2000);

        // Simula eventi che generano notifiche
        System.out.println("   üì° Simulazione eventi per generare notifiche...");
        for (int i = 0; i < 15; i++) {
            // Simula notifica per tratta specifica
            System.out.println("     üì® Evento " + (i + 1) + " simulato");
            Thread.sleep(500);
        }

        latch.await(30, TimeUnit.SECONDS);
        executor.shutdown();

        System.out.println("   üì• Notifiche ricevute: " + notificheRicevute.get());
        System.out.println("   ‚ùå Errori stream: " + erroriConnessione.get());
    }

    /**
     * üîß Test serializzazione protobuf complessa
     */
    private static void testSerializzazioneComplessa() throws Exception {
        System.out.println("\nüîß Test 4: Serializzazione Complessa");

        ManagedChannel channel = ManagedChannelBuilder
                .forAddress("localhost", SERVER_PORT)
                .usePlaintext()
                .build();

        TrenicalServiceGrpc.TrenicalServiceBlockingStub stub = TrenicalServiceGrpc.newBlockingStub(channel);

        // Test 1: Richiesta con tutti i campi opzionali
        System.out.println("   üß™ Test campi opzionali completi...");
        RichiestaGrpc richiestaComplessa = RichiestaGrpc.newBuilder()
                .setTipo("FILTRA")
                .setIdCliente("test-serialization")
                .setTrattaId("tratta-123")
                .setBigliettoId("biglietto-456")
                .setMessaggioExtra("2025-06-01;Milano;Roma;MATTINA")
                .setClasseServizio("GOLD")
                .setTipoPrezzo("FEDELTA")
                .setPenale(15.50)
                .setData("2025-06-01")
                .setPartenza("Milano")
                .setArrivo("Roma")
                .setTipoTreno("Frecciarossa")
                .setFasciaOraria("MATTINA")
                .build();

        RispostaGrpc risposta1 = stub.inviaRichiesta(richiestaComplessa);
        System.out.println("     ‚úÖ Serializzazione complessa: " + risposta1.getEsito());

        // Test 2: Richiesta minimale
        System.out.println("   üß™ Test richiesta minimale...");
        RichiestaGrpc richiestaMinima = RichiestaGrpc.newBuilder()
                .setTipo("FILTRA")
                .build();

        RispostaGrpc risposta2 = stub.inviaRichiesta(richiestaMinima);
        System.out.println("     ‚úÖ Serializzazione minimale: " + risposta2.getEsito());

        // Test 3: Risposta con molte tratte
        System.out.println("   üß™ Test risposta con molti dati...");
        RichiestaGrpc richiestaMultiple = RichiestaGrpc.newBuilder()
                .setTipo("FILTRA")
                .setMessaggioExtra(";;;") // Tutte le tratte
                .build();

        RispostaGrpc risposta3 = stub.inviaRichiesta(richiestaMultiple);
        System.out.println("     ‚úÖ Risposta con " + risposta3.getTratteCount() + " tratte serializzata");

        channel.shutdown();
        System.out.println("   ‚úÖ Test serializzazione completato");
    }

    /**
     * ‚ö†Ô∏è Test gestione errori gRPC specifici
     */
    private static void testGestioneErroriGrpc() throws Exception {
        System.out.println("\n‚ö†Ô∏è Test 5: Gestione Errori gRPC");

        // Test 1: Connessione a porta sbagliata
        System.out.println("   üîå Test connessione porta sbagliata...");
        try {
            ManagedChannel badChannel = ManagedChannelBuilder
                    .forAddress("localhost", 9999) // Porta inesistente
                    .usePlaintext()
                    .build();

            TrenicalServiceGrpc.TrenicalServiceBlockingStub badStub =
                    TrenicalServiceGrpc.newBlockingStub(badChannel)
                            .withDeadlineAfter(2, TimeUnit.SECONDS);

            RichiestaGrpc richiesta = RichiestaGrpc.newBuilder().setTipo("FILTRA").build();
            badStub.inviaRichiesta(richiesta);

        } catch (Exception e) {
            System.out.println("     ‚úÖ Errore connessione gestito: " + e.getClass().getSimpleName());
        }

        // Test 2: Timeout request
        System.out.println("   ‚è±Ô∏è Test timeout request...");
        try {
            ManagedChannel channel = ManagedChannelBuilder
                    .forAddress("localhost", SERVER_PORT)
                    .usePlaintext()
                    .build();

            TrenicalServiceGrpc.TrenicalServiceBlockingStub timeoutStub =
                    TrenicalServiceGrpc.newBlockingStub(channel)
                            .withDeadlineAfter(1, TimeUnit.MILLISECONDS); // Timeout molto breve

            RichiestaGrpc richiesta = RichiestaGrpc.newBuilder().setTipo("FILTRA").build();
            timeoutStub.inviaRichiesta(richiesta);

            channel.shutdown();

        } catch (Exception e) {
            System.out.println("     ‚úÖ Timeout gestito: " + e.getClass().getSimpleName());
        }

        // Test 3: Stream interrotto
        System.out.println("   üîå Test disconnessione stream improvvisa...");
        ManagedChannel channel = ManagedChannelBuilder
                .forAddress("localhost", SERVER_PORT)
                .usePlaintext()
                .build();

        TrenicalServiceGrpc.TrenicalServiceStub stub = TrenicalServiceGrpc.newStub(channel);

        RichiestaPromozioni richiesta = RichiestaPromozioni.newBuilder().build();
        stub.streamPromozioni(richiesta, new StreamObserver<PromozioneGrpc>() {
            @Override
            public void onNext(PromozioneGrpc promo) {
                // Ricevi un messaggio poi disconnetti
                try {
                    channel.shutdownNow();
                } catch (Exception e) {
                    // Disconnessione forzata
                }
            }

            @Override
            public void onError(Throwable t) {
                System.out.println("     ‚úÖ Disconnessione stream gestita: " + t.getClass().getSimpleName());
            }

            @Override
            public void onCompleted() {
                // OK
            }
        });

        // Invia una promozione per triggere la disconnessione
        Thread.sleep(1000);
        trenicalService.broadcastPromozione(new PromozioneDTO(
                "TestDisconnect", "Test", LocalDateTime.now(), LocalDateTime.now().plusHours(1)
        ));

        Thread.sleep(2000);
        System.out.println("   ‚úÖ Test gestione errori completato");
    }

    /**
     * ‚è±Ô∏è Test timeout e resilienza
     */
    private static void testTimeoutResilienza() throws Exception {
        System.out.println("\n‚è±Ô∏è Test 6: Timeout e Resilienza");

        // Test keepalive e reconnection
        System.out.println("   üîÑ Test reconnection automatica...");

        for (int i = 0; i < 5; i++) {
            try {
                ManagedChannel channel = ManagedChannelBuilder
                        .forAddress("localhost", SERVER_PORT)
                        .usePlaintext()
                        .keepAliveTime(10, TimeUnit.SECONDS)
                        .keepAliveTimeout(5, TimeUnit.SECONDS)
                        .keepAliveWithoutCalls(true)
                        .build();

                TrenicalServiceGrpc.TrenicalServiceBlockingStub stub =
                        TrenicalServiceGrpc.newBlockingStub(channel);

                RichiestaGrpc richiesta = RichiestaGrpc.newBuilder().setTipo("FILTRA").build();
                RispostaGrpc risposta = stub.inviaRichiesta(richiesta);

                System.out.println("     ‚úÖ Connessione " + (i + 1) + " riuscita");

                channel.shutdown();
                channel.awaitTermination(1, TimeUnit.SECONDS);

            } catch (Exception e) {
                System.out.println("     ‚ùå Connessione " + (i + 1) + " fallita: " + e.getMessage());
            }

            Thread.sleep(500);
        }

        System.out.println("   ‚úÖ Test resilienza completato");
    }

    /**
     * üöÄ Test performance throughput
     */
    private static void testPerformanceThroughput() throws Exception {
        System.out.println("\nüöÄ Test 7: Performance Throughput");

        int numThreads = 20;
        int requestsPerThread = 50;
        ExecutorService executor = Executors.newFixedThreadPool(numThreads);
        CountDownLatch latch = new CountDownLatch(numThreads);

        AtomicInteger successfulRequests = new AtomicInteger(0);
        long startTime = System.currentTimeMillis();

        for (int t = 0; t < numThreads; t++) {
            final int threadId = t;
            executor.submit(() -> {
                try {
                    ManagedChannel channel = ManagedChannelBuilder
                            .forAddress("localhost", SERVER_PORT)
                            .usePlaintext()
                            .build();

                    TrenicalServiceGrpc.TrenicalServiceBlockingStub stub =
                            TrenicalServiceGrpc.newBlockingStub(channel);

                    for (int r = 0; r < requestsPerThread; r++) {
                        try {
                            RichiestaGrpc richiesta = RichiestaGrpc.newBuilder()
                                    .setTipo("FILTRA")
                                    .setIdCliente("perf-test-" + threadId + "-" + r)
                                    .setMessaggioExtra(";;;")
                                    .build();

                            RispostaGrpc risposta = stub.inviaRichiesta(richiesta);
                            if (risposta.getEsito().equals("OK")) {
                                successfulRequests.incrementAndGet();
                            }

                        } catch (Exception e) {
                            // Ignora errori singoli per questo test
                        }
                    }

                    channel.shutdown();

                } catch (Exception e) {
                    System.err.println("Errore thread " + threadId + ": " + e.getMessage());
                } finally {
                    latch.countDown();
                }
            });
        }

        latch.await(60, TimeUnit.SECONDS);
        long endTime = System.currentTimeMillis();

        executor.shutdown();

        int totalRequests = numThreads * requestsPerThread;
        long duration = endTime - startTime;
        double throughput = successfulRequests.get() * 1000.0 / duration;

        System.out.println("   üìä Requests totali: " + totalRequests);
        System.out.println("   ‚úÖ Requests riusciti: " + successfulRequests.get());
        System.out.println("   ‚è±Ô∏è Durata: " + duration + "ms");
        System.out.println("   üöÄ Throughput: " + String.format("%.2f", throughput) + " req/sec");
        System.out.println("   üìà Success rate: " + String.format("%.2f%%",
                successfulRequests.get() * 100.0 / totalRequests));
    }

    /**
     * üìã Report finale test gRPC
     */
    private static void stampaReportGrpc() {
        System.out.println("\nüìã ===== REPORT FINALE TEST gRPC =====");

        System.out.println("üìä STATISTICHE COMUNICAZIONE gRPC:");
        System.out.println("   üì§ Requests inviati: " + requestsInviati.get());
        System.out.println("   üì• Responses ricevute: " + responsesRicevute.get());
        System.out.println("   üéâ Promozioni ricevute: " + promozioniRicevute.get());
        System.out.println("   üì® Notifiche ricevute: " + notificheRicevute.get());
        System.out.println("   ‚ùå Errori connessione: " + erroriConnessione.get());

        System.out.println("\nüèÜ RISULTATI PER CATEGORIA gRPC:");

        // Request-Response
        double requestSuccessRate = requestsInviati.get() > 0 ?
                (responsesRicevute.get() * 100.0 / requestsInviati.get()) : 0;
        System.out.println("   üîÑ Request-Response: " +
                (requestSuccessRate > 95 ? "‚úÖ ECCELLENTE" :
                        requestSuccessRate > 85 ? "üëç BUONO" : "‚ùå PROBLEMI") +
                " (" + String.format("%.1f%%", requestSuccessRate) + ")");

        // Stream Promozioni
        double promoEfficiency = promozioniRicevute.get() > 0 ?
                (promozioniRicevute.get() / 50.0) : 0; // 50 client attesi
        System.out.println("   üéâ Stream Promozioni: " +
                (promoEfficiency > 90 ? "‚úÖ ECCELLENTE" :
                        promoEfficiency > 70 ? "üëç BUONO" : "‚ùå PROBLEMI") +
                " (" + promozioniRicevute.get() + " msg ricevuti)");

        // Stream Notifiche
        System.out.println("   üì® Stream Notifiche: " +
                (notificheRicevute.get() > 10 ? "‚úÖ FUNZIONANTE" : "‚ö†Ô∏è LIMITATO") +
                " (" + notificheRicevute.get() + " notifiche)");

        // Gestione Errori
        System.out.println("   ‚ö†Ô∏è Gestione Errori: " +
                (erroriConnessione.get() < 50 ? "‚úÖ ROBUSTA" : "‚ùå PROBLEMI") +
                " (" + erroriConnessione.get() + " errori)");

        System.out.println("\nüéØ COMPONENTI gRPC TESTATI:");
        System.out.println("   ‚úÖ Protobuf Serialization/Deserialization");
        System.out.println("   ‚úÖ Unary RPC (Request-Response)");
        System.out.println("   ‚úÖ Server Streaming RPC (Promozioni)");
        System.out.println("   ‚úÖ Server Streaming RPC (Notifiche)");
        System.out.println("   ‚úÖ Channel Management & Lifecycle");
        System.out.println("   ‚úÖ Error Handling & Recovery");
        System.out.println("   ‚úÖ Timeout & Deadlines");
        System.out.println("   ‚úÖ Concurrent Connections");
        System.out.println("   ‚úÖ High Throughput Performance");

        System.out.println("\nüí° ASPETTI gRPC NON TESTATI (ma non necessari per questo progetto):");
        System.out.println("   ‚ö™ Client Streaming RPC");
        System.out.println("   ‚ö™ Bidirectional Streaming RPC");
        System.out.println("   ‚ö™ TLS/SSL Security");
        System.out.println("   ‚ö™ Authentication & Authorization");
        System.out.println("   ‚ö™ Load Balancing");
        System.out.println("   ‚ö™ Compression");
        System.out.println("   ‚ö™ Interceptors");

        // Verdetto finale
        boolean requestOk = requestSuccessRate > 90;
        boolean streamOk = promozioniRicevute.get() > 100;
        boolean errorsOk = erroriConnessione.get() < 100;

        System.out.println("\nüèÜ VERDETTO gRPC:");
        if (requestOk && streamOk && errorsOk) {
            System.out.println("   üéâ COMUNICAZIONE gRPC: ECCELLENTE!");
            System.out.println("   ‚ú® Tutti i pattern gRPC funzionano perfettamente");
            System.out.println("   üöÄ Sistema pronto per carico di produzione");
        } else if (requestOk && (streamOk || errorsOk)) {
            System.out.println("   üëç COMUNICAZIONE gRPC: BUONA!");
            System.out.println("   ‚úÖ Funzionalit√† principali stabili");
            System.out.println("   üîß Possibili ottimizzazioni per stream");
        } else {
            System.out.println("   ‚ö†Ô∏è COMUNICAZIONE gRPC: RICHIEDE ATTENZIONE!");
            System.out.println("   üîß Verificare configurazione gRPC");
            System.out.println("   üì° Possibili problemi di rete o performance");
        }

        System.out.println("\n‚úÖ ===== TEST gRPC COMPLETATI =====");
    }

    private static void fermaSistema() {
        System.out.println("\nüõë Shutdown sistema test gRPC...");

        if (trenicalService != null) {
            trenicalService.shutdown();
        }

        if (server != null) {
            server.shutdown();
            try {
                if (!server.awaitTermination(5, TimeUnit.SECONDS)) {
                    server.shutdownNow();
                }
            } catch (InterruptedException e) {
                server.shutdownNow();
            }
        }

        if (bancaServer != null) {
            bancaServer.shutdown();
            try {
                if (!bancaServer.awaitTermination(5, TimeUnit.SECONDS)) {
                    bancaServer.shutdownNow();
                }
            } catch (InterruptedException e) {
                bancaServer.shutdownNow();
            }
        }

        System.out.println("‚úÖ Sistema gRPC fermato");
    }
}